# score-dso

./: .gitignore  CMakeLists.txt  README.md  c_cpp_properties.json
apps/: CMakeLists.txt  main.cpp
include/: DatabaseReader.h
src/: CMakeLists.txt  DatabaseReader.cpp
